--- a/lesson3/package.json
+++ b/lesson3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson2",
+  "name": "lesson3",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
     "@types/node": "^24.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+  "zod": "^3.22.0"
   }
 }
