--- a/lesson13/package.json
+++ b/lesson13/package.json
@@ -16,7 +16,8 @@
     "test:frontend": "cd frontend && npm test",
     "start:backend": "cd backend && npm start",
     "start:frontend": "cd frontend && npm run preview",
-    "clean": "rm -rf backend/node_modules backend/dist frontend/node_modules frontend/dist node_modules"
+    "clean": "rm -rf backend/node_modules backend/dist frontend/node_modules frontend/dist node_modules",
+    "prepare": "husky"
   },
   "keywords": [
     "task-tracker",
@@ -29,6 +30,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "@eslint/js": "^9.39.1",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "jiti": "^2.6.1",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.6.2",
+    "typescript-eslint": "^8.48.0"
+  },
+  "lint-staged": {
+    "frontend/**/*.{ts,tsx}": "npx eslint --fix --config frontend/eslint.config.ts",
+    "backend/**/*.ts": "npx eslint --fix --config backend/eslint.config.ts"
   }
 }
