--- a/lesson14/package.json
+++ b/lesson14/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/mocha": "^10.0.10",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
