--- a/lesson14/backend/package.json
+++ b/lesson14/backend/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest --detectOpenHandles --forceExit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "seed:users": "tsx src/scripts/seed-users.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
