--- a/lesson14/frontend/package.json
+++ b/lesson14/frontend/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "server": "json-server --watch db.json --port 3000"
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
@@ -37,7 +36,6 @@
     "globals": "^16.5.0",
     "jiti": "^2.6.1",
     "jsdom": "^23.2.0",
-    "json-server": "^1.0.0-beta.3",
     "prettier": "^3.6.2",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.48.0",
